# 2026-Barnfield-Burke-Friedlander-Hoheisel

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: fig_7_1_problem_data.py  fig_7_2_overflow.py  fig_7_3_analytic_continuation.py  fig_7_4_regularization_path.py  fig_7_iteration_trajectories.py
src/scaleshape/: __init__.py  figstyle.py  solver.py  ueg.py  utils.py
src/selfscaling/: __init__.py  figstyle.py  solver.py  ueg.py  utils.py
tests/: test_smoke.py
