[project]
name = "scaleshape"
version = "1.0.0"
description = "A scale-shape dual Newton method for entropic least squares (Section 7 reproduction code)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Nick Barnfield" },
    { name = "James V. Burke" },
    { name = "Michael P. Friedlander", email = "mpf@cs.ubc.ca" },
    { name = "Tim Hoheisel" },
]
keywords = [
    "entropy regularization",
    "Newton methods",
    "analytic continuation",
    "convex optimization",
    "reproducible research",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/mpf/2026-Barnfield-Burke-Friedlander-Hoheisel"
Repository = "https://github.com/mpf/2026-Barnfield-Burke-Friedlander-Hoheisel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scaleshape"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
